# BackTest-Cpp

./: .gitignore  BacktestEngine.cpp  BacktestEngine.h  CMakeLists.txt  Data.cpp  Data.h  Indicator.cpp  Indicator.h  README.md  Strategy.cpp  Strategy.h  main.cpp
.github/workflows/: test.yml
Examples/: CMakeLists.txt
Examples/Data/: BTC-USD.csv
Examples/StreamingSupportResistance/: CMakeLists.txt  main.cpp
Examples/SupportResistance/: CMakeLists.txt  SupportResistance.cpp  SupportResistance.h  main.cpp  readme.txt
Examples/SupportResistance/Data/: ^NSEMDCP50.csv
include/backtest/: BacktestEngine.h  Data.h  Engine.h  FileIterator.h  Indicator.h  Indicators.h  Strategy.h
src/: BacktestEngine.cpp  Data.cpp  Indicator.cpp  Strategy.cpp  main.cpp
src/DataReader/: Data.cpp
src/Engine/: BacktestEngine.cpp  BacktestEngine.h
src/Indicators/: Indicator.cpp  Indicator.h
src/Strategy/: Strategy.cpp  Strategy.h
